force-app/main/default/objects/Modulo__c/fields/Avance__c.field-meta.xml
<CustomField>
    <fullName>Avance__c</fullName>
    <label>Avance</label>
    <summaryFilterItems>
        <field>Unidad__c.Estado__c</field>
        <operation>equals</operation>
        <value>Completado</value>
    </summaryFilterItems>
    <summaryForeignKey>Unidad__c.Modulo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>