force-app/main/default/objects/Modulo__c/fields/Puntos__c.field-meta.xml
<CustomField>
    <fullName>Puntos__c</fullName>
    <label>Puntos</label>
    <summarizedField>Unidad__c.Puntos__c</summarizedField>
    <summaryForeignKey>Unidad__c.Modulo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>