force-app/main/default/objects/Modulo__c/fields/Tiempo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Estimado__c</fullName>
    <label>Tiempo Estimado</label>
    <summarizedField>Unidad__c.Tiempo_Estimado__c</summarizedField>
    <summaryForeignKey>Unidad__c.Modulo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>