force-app/main/default/objects/Modulo__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Modulo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>