force-app/main/default/objects/Modulo__c/fields/Unidades_Totales__c.field-meta.xml
<CustomField>
    <fullName>Unidades_Totales__c</fullName>
    <label>Unidades Totales</label>
    <summaryForeignKey>Unidad__c.Modulo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>