force-app/main/default/objects/Modulo__c/validationRules/Active_Rol_and_skill.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Rol_and_skill</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Active__c = TRUE,
OR(
  ISBLANK(Rol__c),
ISBLANK(TEXT(Skill__c)))
)</errorConditionFormula>
    <errorMessage>Skill and Role must be filled before activating</errorMessage>
</ValidationRule>